--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
     "dev": "node api/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@supabase/supabase-js": "^2.38.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "@supabase/supabase-js": "^2.38.0"
+    "express": "^4.18.2",
+    "web-push": "^3.6.7"
   },
   "engines": {
     "node": "22.x"
